// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseResultsSection component should render correctly should render correctly with {"passes":1,"fails":3} 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4288871727,
            1419967791,
            10681647,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 23.5,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {},
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#16501D",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          1
        </Text>
      </View>
    </View>
  </View>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4294334485,
            1307990037,
            16144405,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 70.5,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#F65815",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {
              "shadowColor": "#000000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.25,
              "shadowRadius": 3,
            },
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          3
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BaseResultsSection component should render correctly should render correctly with {"passes":8,"fails":2} 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4288871727,
            1419967791,
            10681647,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 188,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {},
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#16501D",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          8
        </Text>
      </View>
    </View>
  </View>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4294334485,
            1307990037,
            16144405,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 47,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#F65815",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {
              "shadowColor": "#000000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.25,
              "shadowRadius": 3,
            },
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BaseResultsSection component should render correctly should render correctly with {"passes":10,"fails":5} 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4288871727,
            1419967791,
            10681647,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 235,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {},
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#16501D",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          10
        </Text>
      </View>
    </View>
  </View>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeInDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    exiting={
      FadeOutDown {
        "build": [Function],
        "callbackV": undefined,
        "dampingV": undefined,
        "delayV": undefined,
        "durationV": 500,
        "easingV": undefined,
        "initialValues": undefined,
        "massV": undefined,
        "overshootClampingV": undefined,
        "randomizeDelay": false,
        "restDisplacementThresholdV": undefined,
        "restSpeedThresholdV": undefined,
        "rotateV": undefined,
        "stiffnessV": undefined,
        "type": undefined,
      }
    }
    onLayout={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "flex-end",
      }
    }
    testID="BaseChartBarComponentTestID"
  >
    <View>
      <BVLinearGradient
        colors={
          [
            4294334485,
            1307990037,
            16144405,
          ]
        }
        endPoint={
          {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={
          [
            0,
            0.48,
            1,
          ]
        }
        startPoint={
          {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          {
            "height": 117.5,
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#F65815",
              "borderRadius": 9999,
              "justifyContent": "center",
              "position": "absolute",
            },
            {
              "shadowColor": "#000000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.25,
              "shadowRadius": 3,
            },
            {
              "height": 36,
              "top": -18,
              "width": 36,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "lineHeight": 24,
              },
              {
                "fontFamily": "SourceSansPro-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
              },
            ]
          }
        >
          5
        </Text>
      </View>
    </View>
  </View>
</View>
`;
